# new_robots

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
argos3/: CMakeLists.txt
argos3/plugins/robots/: CMakeLists.txt  README.md
argos3/plugins/robots/newepuck/: CMakeLists.txt
argos3/plugins/robots/newepuck/control_interface/: ci_newepuck_base_ground_sensor.cpp  ci_newepuck_base_ground_sensor.h  ci_newepuck_lidar_sensor.cpp  ci_newepuck_lidar_sensor.h  ci_newepuck_light_sensor.cpp  ci_newepuck_light_sensor.h  ci_newepuck_proximity_sensor.cpp  ci_newepuck_proximity_sensor.h
argos3/plugins/robots/newepuck/simulator/: dynamics2d_newepuck_model.cpp  dynamics2d_newepuck_model.h  dynamics3d_newepuck_model.cpp  dynamics3d_newepuck_model.h  newepuck_base_ground_rotzonly_sensor.cpp  newepuck_base_ground_rotzonly_sensor.h  newepuck_entity.cpp  newepuck_entity.h  newepuck_lidar_default_sensor.cpp  newepuck_lidar_default_sensor.h  newepuck_lidar_sensor.cpp  newepuck_lidar_sensor.h  newepuck_light_rotzonly_sensor.cpp  newepuck_light_rotzonly_sensor.h  newepuck_proximity_default_sensor.cpp  newepuck_proximity_default_sensor.h  qtopengl_newepuck.cpp
argos3/plugins/robots/testbot/: CMakeLists.txt
argos3/plugins/robots/testbot/simulator/: dynamics2d_testbot_model.cpp  dynamics2d_testbot_model.h  qtopengl_testbot.cpp  qtopengl_testbot.h  testbot_entity.cpp  testbot_entity.h
argos3/plugins/robots/turtlebot4/: CMakeLists.txt
argos3/plugins/robots/turtlebot4/control_interface/: ci_turtlebot4_base_ground_sensor.cpp  ci_turtlebot4_base_ground_sensor.h  ci_turtlebot4_colored_blob_omnidirectional_camera_sensor.cpp  ci_turtlebot4_colored_blob_omnidirectional_camera_sensor.h  ci_turtlebot4_lidar_sensor.cpp  ci_turtlebot4_lidar_sensor.h  ci_turtlebot4_proximity_sensor.cpp  ci_turtlebot4_proximity_sensor.h
argos3/plugins/robots/turtlebot4/simulator/: dynamics2d_turtlebot4_model.cpp  dynamics2d_turtlebot4_model.h  dynamics3d_turtlebot4_model.cpp  dynamics3d_turtlebot4_model.h  qtopengl_turtlebot4.cpp  qtopengl_turtlebot4.h  turtlebot4_base_ground_rotzonly_sensor.cpp  turtlebot4_base_ground_rotzonly_sensor.h  turtlebot4_colored_blob_omnidirectional_camera_rotzonly_sensor.cpp  turtlebot4_colored_blob_omnidirectional_camera_rotzonly_sensor.h  turtlebot4_colored_blob_perspective_camera_default_sensor.cpp  turtlebot4_colored_blob_perspective_camera_default_sensor.h  turtlebot4_entity copy.h  turtlebot4_entity.cpp  turtlebot4_entity.h  turtlebot4_lidar_default_sensor.cpp  turtlebot4_lidar_default_sensor.h  turtlebot4_measures.cpp  turtlebot4_measures.h  turtlebot4_proximity_default_sensor.cpp  turtlebot4_proximity_default_sensor.h
argos3/plugins/robots/turtlebot4/simulator/models/: TTBOT_4_V4.mtl  turtlebot3.mtl
argos3/testing/controllers/: CMakeLists.txt
argos3/testing/controllers/epuck_obstacleavoidance/: CMakeLists.txt  epuck_obstacleavoidance.cpp  epuck_obstacleavoidance.h
argos3/testing/controllers/newepuck_lidar_test/: CMakeLists.txt  newepuck_lidar_test.cpp  newepuck_lidar_test.h
argos3/testing/controllers/newepuck_test/: CMakeLists.txt  newepuck_test.cpp  newepuck_test.h
argos3/testing/controllers/testbot_test/: CMakeLists.txt  testbot_test.cpp  testbot_test.h
argos3/testing/controllers/turtlebot4_test/: CMakeLists.txt  turtlebot4_test.cpp  turtlebot4_test.h
argos3/testing/experiments/: epuck_obstacleavoidance.argos  newepuck_lidar_test.argos  newepuck_test.argos  newepuck_test_3d-dynamics.argos  testbot_test.argos  turtlebot4_test.argos
argos3/testing/loop_functions/: CMakeLists.txt
argos3/testing/loop_functions/test_loop_functions/: CMakeLists.txt  test_loop_functions.cpp  test_loop_functions.h
docs/: ADDING_NEW_ROBOT.md  COPY_ROBOT_TEMPLATE.md  NEWEPUCK_TEMPLATE.md
myepuck/: CMakeLists.txt
myepuck/control_interface/: ci_myepuck_light_sensor.cpp  ci_myepuck_light_sensor.h  ci_myepuck_proximity_sensor.cpp  ci_myepuck_proximity_sensor.h
myepuck/simulator/: myepuck_light_rotzonly_sensor.cpp  myepuck_light_rotzonly_sensor.h
newepuck/: CMakeLists.txt
newepuck/control_interface/: ci_newepuck_proximity_sensor.h
newepuck/simulator/: dynamics2d_newepuck_model.h  dynamics3d_newepuck_model.cpp  newepuck_entity.cpp  newepuck_entity.h  newepuck_proximity_default_sensor.cpp  newepuck_proximity_default_sensor.h  qtopengl_newepuck.h
